syntax = "proto3";

package catalog.category;

import "common/base.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.gdn.project.waroenk.catalog";
option java_outer_classname = "CategoryMessagesProto";

message CategoryData {
    string id = 1;
    string name = 2;
    string slug = 3;
    string icon_url = 4;
    optional string parent_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateCategoryRequest {
    string name = 1;
    string slug = 2;
    string icon_url = 3;
    optional string parent_id = 4;
}

message UpdateCategoryRequest {
    string id = 1;
    optional string name = 2;
    optional string slug = 3;
    optional string icon_url = 4;
    optional string parent_id = 5;
}

message FindCategoryBySlugRequest {
    string slug = 1;
}

message FilterCategoryRequest {
    optional string name = 1;
    optional string slug = 2;
    optional string parent_id = 3;
    int32 size = 4;
    optional string cursor = 5;
    optional common.SortBy sort_by = 6;
}

message MultipleCategoryResponse {
    repeated CategoryData data = 1;
    string next_token = 2;
    int32 total = 3;
}

message CategoryTreeResponse {
    repeated CategoryNode nodes = 1;
}

message CategoryNode {
    string id = 1;
    string name = 2;
    string slug = 3;
    string icon_url = 4;
    repeated CategoryNode children = 5;
}













